# sysopki

./: LICENSE  README.md
lab1/: CMakeLists.txt
lab1/lib/: dummy.c  dummy.h
lab1/src/: main.c  main_module.c
lab2/: CMakeLists.txt
lab2/include/: getopt_example.h
lab2/src/: getopt_example.c  getrandom_example.c  nftw_example.c  readdir_example.c
lab6/: CMakeLists.txt
lab6/include/POSIX/: chat.h
lab6/include/system_V/: chat.h  client_routines.h  server_routines.h
lab6/src/POSIX/: chat.c  client.c  server.c
lab6/src/system_V/: chat.c  client.c  client_routines.c  server.c  server_routines.c
